# ai-tutor-screener

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml
backend/: .env.example  assessment.py  config.py  conversation.py  database.py  main.py  prompts.py  requirements.txt
frontend/: app.js  dashboard.html  index.html  report.html  style.css
frontend/js/: api.js  audio.js  main.js  theme.js  ui.js
